--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ tr td:first-child {
     font-weight: bold;
     padding-right: 20px;
 }
+td {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
 
 body:before, body:after {
     content: "";
